# shibatize

./: pyproject.toml
shibatize/: __main__.py
