[tool.poetry]
name = "shibatize"
version = "0.1.0"
description = ""
authors = ["Hajime Fukuda <haji.fkd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.45.1"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
